--- a/src/app/patient/scheduleApp/scheduleApp.component.html
+++ b/src/app/patient/scheduleApp/scheduleApp.component.html
@@ -26,7 +26,7 @@
 
     <div style="margin-top: 25px; margin-bottom: 40px">
       <form>
-        <input class="btn badge-success" type="submit" (click)="filterChange()" value="Search" style="width: 90px;"/>
+        <input class="btn badge-success" type="submit" id="searchBtn" (click)="filterChange()" value="Search" style="width: 90px;"/>
       </form>
     </div>
 
