--- a/src/app/doctor/WorkCalFinal/WorkCalFinal.component.html
+++ b/src/app/doctor/WorkCalFinal/WorkCalFinal.component.html
@@ -1,3 +1,9 @@
+<html>
+
+<body>
+<br>
+<br>
+<br>
 
 <full-calendar
   defaultView="dayGridMonth"
@@ -7,3 +13,5 @@
   [weekends]="true"
   [events]= "calendarEvents"
 ></full-calendar>
+</body>
+</html>
