--- a/src/app/cadmin/acceptingApp/acceptingApp.component.html
+++ b/src/app/cadmin/acceptingApp/acceptingApp.component.html
@@ -5,51 +5,83 @@
     <title>Accepting appointments</title>
 </head>
 <body>
-<div *ngIf="!showrooms">
-  <h1>List of appointment requests</h1>
-  <table class="table table-light">
-    <tr>
-      <th>Appointment type</th>
-      <th>Doctor</th>
-      <th>Patient</th>
-      <th>Date</th>
-      <th></th>
-      <th></th>
-    </tr>
-    <tr *ngFor="let a of appointments">
-      <td>{{a.type.type}}</td>
-      <td>{{a.doctor.firstName}} {{a.doctor.lastName}}</td>
-      <td>{{a.patient.firstName}} {{a.patient.lastName}}</td>
-      <td>{{this.converttostr(a.startTime)}}</td>
-      <td><button class="btn badge-primary" (click)="getfreerooms(a.id,'APPOINTMENT')">Assign Room</button></td>
-      <td><button class="btn badge-danger" (click)="reject(a.id,true)">Reject</button></td>
-    </tr>
-    <tr *ngFor="let a of surgeries">
-      <td>'Surgery'</td>
-      <td>{{a.doctors.values().next().value.firstName}}</td>
-      <td>{{a.patient.firstName}} {{a.patient.lastName}}</td>
-      <td>{{this.converttostr(a.startTime)}}</td>
-      <td><button class="btn badge-primary" (click)="getfreerooms(a.id,'SURGERY')">Assign Room</button></td>
-      <td><button class="btn badge-danger" (click)="reject(a.id,false)">Reject</button></td>
-    </tr>
-  </table>
-</div>
-<div *ngIf="showrooms">
-  <h1>Free rooms</h1>
-  <table class="table table-light">
-    <tr>
-      <th>Room Name</th>
-      <th></th>
-    </tr>
-    <tr *ngFor="let r of freerooms">
-      <td>{{r.name}}</td>
-      <td><button class="btn badge-success" (click)="bookRoom(r.id, this.idclicked)">Book</button></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><button class="btn badge-dark" (click)="back()">Back</button></td>
-    </tr>
-  </table>
+<br>
+<br>
+<br>
+<div>
+  <mat-progress-spinner
+    class="example-margin"
+    style="position:fixed;left: 50%;top: 50%;width: 100px;height: 100px;margin-top:-50px;margin-left:-50px"
+    [color]="color"
+    [mode]="mode" *ngIf="loading">
+  </mat-progress-spinner>
+  <div style="width: 100%; text-align: center" *ngIf="!loading">
+    <h1 style="margin-bottom: 20px;font-weight: bold;">Appointment and Surgery Requests</h1>
+    <table class="table table-light" style="border-color: lightblue;border-style: solid;border-width: thick;">
+      <tr>
+        <th>Appointment type</th>
+        <th>Doctor</th>
+        <th>Patient</th>
+        <th>Date</th>
+        <th></th>
+        <th></th>
+      </tr>
+      <tr *ngFor="let a of appointmentsSurgeries">
+        <td style="vertical-align: middle">{{a.appointmentType}}</td>
+        <td style="vertical-align: middle">{{a.doctorsName}}</td>
+        <td style="vertical-align: middle">{{a.patientName}}</td>
+        <td style="vertical-align: middle">{{a.dateString}}</td>
+        <td style="vertical-align: middle"><button class="btn badge-success">Accept</button></td>
+        <td style="vertical-align: middle"><button class="btn badge-danger" >Reject</button></td>
+      </tr>
+    </table>
+  </div>
+  <!--<div *ngIf="!showrooms">
+    <h1>List of appointment requests</h1>
+    <table class="table table-light">
+      <tr>
+        <th>Appointment type</th>
+        <th>Doctor</th>
+        <th>Patient</th>
+        <th>Date</th>
+        <th></th>
+        <th></th>
+      </tr>
+      <tr *ngFor="let a of appointments">
+        <td>{{a.type.type}}</td>
+        <td>{{a.doctor.firstName}} {{a.doctor.lastName}}</td>
+        <td>{{a.patient.firstName}} {{a.patient.lastName}}</td>
+        <td>{{this.converttostr(a.startTime)}}</td>
+        <td><button class="btn badge-primary" (click)="getfreerooms(a.id,'APPOINTMENT')">Assign Room</button></td>
+        <td><button class="btn badge-danger" (click)="reject(a.id,true)">Reject</button></td>
+      </tr>
+      <tr *ngFor="let a of surgeries">
+        <td>'Surgery'</td>
+        <td>{{a.doctors.values().next().value.firstName}}</td>
+        <td>{{a.patient.firstName}} {{a.patient.lastName}}</td>
+        <td>{{this.converttostr(a.startTime)}}</td>
+        <td><button class="btn badge-primary" (click)="getfreerooms(a.id,'SURGERY')">Assign Room</button></td>
+        <td><button class="btn badge-danger" (click)="reject(a.id,false)">Reject</button></td>
+      </tr>
+    </table>
+  </div>
+  <div *ngIf="showrooms">
+    <h1>Free rooms</h1>
+    <table class="table table-light">
+      <tr>
+        <th>Room Name</th>
+        <th></th>
+      </tr>
+      <tr *ngFor="let r of freerooms">
+        <td>{{r.name}}</td>
+        <td><button class="btn badge-success" (click)="bookRoom(r.id, this.idclicked)">Book</button></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><button class="btn badge-dark" (click)="back()">Back</button></td>
+      </tr>
+    </table>
+  </div>-->
 </div>
 </body>
 </html>
