css added to fast appointment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -137,7 +137,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
 
-        <li class="nav-item" *ngIf="patientloged || doctorloged">
+        <li class="nav-item" *ngIf="patientloged || doctorloged || cadminloged">
           <a class="nav-link" routerLink="/profile">Profile</a>
         </li>
         <li class="nav-item">
