--- a/src/app/patient/scheduleApp/scheduleApp.component.html
+++ b/src/app/patient/scheduleApp/scheduleApp.component.html
@@ -1,4 +1,5 @@
 <html>
+<script src="scheduleApp.component.integration.spec.ts"></script>
 <body>
 <br>
 <br>
@@ -43,9 +44,9 @@
       </form>
     </div>
 
-    <div *ngIf="showClinics">
+    <div >
 
-    <!-- SAMO FILTRIRANE KLINIKE CE BITI -->
+    <!-- *ngIf="showClinics"SAMO FILTRIRANE KLINIKE CE BITI -->
     <table style="width: 900px" class="table table-bordered table-striped" id="clinicsTable">
       <thead class = "thead dark">
       <tr>
