--- a/src/app/cadmin/clinicProfile/clinicProfile.component.html
+++ b/src/app/cadmin/clinicProfile/clinicProfile.component.html
@@ -7,10 +7,20 @@
 
 <h1 style="color:#33cabb" align="center">Clinic profile info</h1>
 
-<div class="container container-table input-group input-group-sm">
-  <h5 style="color:#33cabb">Clinic</h5>
-</div>
 
+<div class="container">
+  <h3 style="color:#33cabb">Clinic Name</h3>
+  <form>
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" id="name">
+    </div>
+  </form>
+</div>
+</body>
+</html>
+
+<!--
 <div class="input-group form-group">
   <div class="input-group-prepend">
           <span class="input-group-text">
@@ -42,11 +52,4 @@
          [(ngModel)]="clinic.description"/>
 </div>
 
-<div>
-  <label  for="newName">Full Name</label>
-</div>
-
-
-
-</body>
-</html>
+    -->
