--- a/src/app/cadmin/rooms/rooms.component.html
+++ b/src/app/cadmin/rooms/rooms.component.html
@@ -18,8 +18,8 @@
     </div>
 
     <div class="form-group">
-      <input type="text" id="address" class="form-control"
-             placeholder="Address"
+      <input type="text" id="roomType" class="form-control"
+             placeholder="Type"
              [(ngModel)]="room.type"
              [ngModelOptions]="{standalone: true}"/>
     </div>
@@ -32,7 +32,7 @@
 
 <div>
   <form>
-    <input [ngModelOptions]="{standalone: true}" [(ngModel)]="filteredString" (change)="filterChange()"/>   <button class="btn-info" type="submit">Filter</button>
+    <input [ngModelOptions]="{standalone: true}" [(ngModel)]="filteredString" (change)="filterChange()"/>   <button class="btn-info" type="submit" (click)="filterChange()">Filter</button>
   </form>
 </div>
 
@@ -43,6 +43,7 @@
   <tr>
     <th scope="col">Name</th>
     <th scope="col">Type</th>
+    <th scope="col"></th>
   </tr>
 
   </thead>
@@ -50,9 +51,11 @@
   <tbody>
 
   <!--Ovdje nalijepiti listu soba iz baze -->
-  <tr *ngFor="let r of rooms">
+  <tr *ngFor="let r of filteredRooms">
     <td>{{r.name}}</td>
     <td>{{r.type}}</td>
+    <td><button class="btn badge-danger" (click)="delete_Room2(r.id)">Delete</button></td>
+
   </tr>
 
   </tbody>
