--- a/src/app/patient/upcoming-events/upcoming-events.component.html
+++ b/src/app/patient/upcoming-events/upcoming-events.component.html
@@ -12,7 +12,7 @@
     [mode]="mode" *ngIf="loading">
   </mat-progress-spinner>
   <div style="width: 100%; text-align: center" *ngIf="!loading">
-    <h1 style="margin-bottom: 20px;font-weight: bold;">Past Appointments and Surgeries</h1>
+    <h1 style="margin-bottom: 20px;font-weight: bold;">Upcoming Appointments and Surgeries</h1>
     <table class="table table-light" style="border-color: lightblue;border-style: solid;border-width: thick;">
       <tr>
         <th>Appointment type</th>
