--- a/src/app/ccadmin/adminInfo/ccadminInfo.component.html
+++ b/src/app/ccadmin/adminInfo/ccadminInfo.component.html
@@ -3,7 +3,7 @@
 <br>
 <br>
 <br>
-<h2 align="center" style="color:#33cabb"> Clinic center admin profile</h2>
+<h2 align="center" style="color:#33cabb"> Profile page</h2>
 
 <div class="split left">
   <form>
